feat: Add dark theme

--- a/dev/index.html
+++ b/dev/index.html
@@ -7,7 +7,8 @@
     <title>Gitalk</title>
     <style type="text/css">
       body {
-        margin: 0
+        margin: 0;
+        background-color: #000;
       }
       #gitalk-container {
         margin: 0 auto;
